src/components/character/character.css
/* ... */
.pageViewStylings {
    -webkit-box-shadow: 5px 5px 15px 5px #000000;
    box-shadow: 5px 5px 15px 5px #000000;
}

.pageOne {
    background-image: url("../../assets/page1.png");
}

.pageTwo {
    background-image: url("../../assets/page2.png");
}

.pageTwoMargin {
    margin-top: 15px;
    margin-bottom: 15px;
}

.pageBase p, .pageBase input {
    position: absolute;
    font-size: 13px;
    margin: 0
}

input, textarea {
    background: rgba(173, 216, 230, 0.50);
    border: none;
    position: relative;
    font-size: 13px;
}

.viewer input, .viewer textarea {
    background-color: transparent;
}

.viewer input:hover, .viewer textarea:hover {
    background: rgba(173, 216, 230, 0.50);
    transition: .8s
}

.viewer .contactstextArea {
    top: 739px; 
}

.nameLocation {
    left: 123px;
    top: 20px;
}
input.nameLocation {
    width: 271px;
}

.raceLocation {
    left: 53px;
    top: 43px;
}
input.raceLocation {
    width: 68px;
}

.levelLocation {
    left: 489px;
    top: 43px;
}
input.levelLocation {
    left: 470px;
    width: 51px;
}

.primaryLocation {
    left: 195px;
    top: 43px;
}
input.primaryLocation {
    width: 86px;
}

.primarylevelLocation {
    left: 276px;
    top: 43px;
}
input.primarylevelLocation {
    left: 282px;
    width: 35px;
}

.secondaryLocation {
    left: 319px;
    top: 43px;
}
input.secondaryLocation {
    width: 93px;
}

.secondarylevelLocation {
    left: 420px;
    top: 43px;
}
input.secondarylevelLocation {
    left: 413px;
    width: 35px;
}

.crpLocation {
    left: 545px;
    top: 43px;
    width: 51px;
    text-align: center;
}
input.crpLocation {
    width: 51px;
}

.excurrentLocation {
    left: 319px;
    top: 66px;
    width: 127px;
    text-align: center;
}
input.excurrentLocation {
    width: 127px;
}

.extolevelLocation {
    left: 95px;
    top: 66px;
    width: 151px;
    text-align: center;
}

.drawbackLocation {
    left: 20px;
    top: 87px;
    text-indent: 123px;
    width: 426px;
}
.drawbacktextArea {
    left: 20px;
    width: 426px;
    max-width: 426px;
    min-width: 426px;
    max-height: 62px;
    min-height: 62px;
    text-indent: 122px;
    overflow: hidden;
}

.strLocation {
    left: 20px;
    top: 171px;
    width: 48px;
    text-align: center;
}
.strConfrontationLocation {
    left: 98px;
    top: 171px;
    width: 48px;
    text-align: center;
}

.strCarryLocation {
    left: 713px;
    top: 488px;
    width: 80px;
    text-align: center;
}
.shownGearCarryLocation {
    left: 621px;
    top: 488px;
    width: 80px;
    text-align: center;
}
.strDamageLocation {
    left: 252px;
    top: 618px;
    width: 117px;
    text-align: center;
}

.dexLocation {
    left: 20px;
    top: 192px;
    width: 48px;
    text-align: center;
}
.dexConfrontationLocation {
    left: 98px;
    top: 192px;
    width: 48px;
    text-align: center;
}

.attackLocation {
    left: 254px;
    top: 555px;
    width: 116px;
    text-align: center;
}

.defenseLocation {
    left: 254px;
    top: 576px;
    width: 116px;
    text-align: center;
}

.initLocation {
    left: 254px;
    top: 597px;
    width: 116px;
    text-align: center;
}

.encumbLocation {
    left: 254px;
    top: 640px;
    width: 116px;
    text-align: center;
}

.conLocation {
    left: 20px;
    top: 213px;
    width: 48px;
    text-align: center;
}
.conConfrontationLocation {
    left: 98px;
    top: 213px;
    width: 48px;
    text-align: center;
}

.intLocation {
    left: 20px;
    top: 234px;
    width: 48px;
    text-align: center;
}
.intConfrontationLocation {
    left: 98px;
    top: 234px;
    width: 48px;
    text-align: center;
}

.wisLocation {
    left: 20px;
    top: 255px;
    width: 48px;
    text-align: center;
}
.wisConfrontationLocation {
    left: 98px;
    top: 255px;
    width: 48px;
    text-align: center;
}

.chaLocation {
    left: 20px;
    top: 276px;
    width: 48px;
    text-align: center;
}
.chaConfrontationLocation {
    left: 98px;
    top: 276px;
    width: 48px;
    text-align: center;
}

.crawlLocation {
    left: 220px;
    top: 171px;
    width: 48px;
    text-align: center;
}
.walkLocation {
    left: 220px;
    top: 192px;
    width: 48px;
    text-align: center;
}
.jogLocation {
    left: 220px;
    top: 213px;
    width: 48px;
    text-align: center;
}
.runLocation {
    left: 220px;
    top: 234px;
    width: 48px;
    text-align: center;
}
.sprintLocation {
    left: 220px;
    top: 255px;
    width: 48px;
    text-align: center;
}

.honorLocation {
    left: 20px;
    top: 342px;
    width: 48px;
    text-align: center;
}

.temperamentLocation {
    left: 20px;
    top: 383px;
    width: 224px;
}

.extrahonordiceLocation {
    left: 418px;
    top: 342px;
    width: 28px;
    text-align: center;
}

.weaponsquare {
    position: absolute;
    height: 137px;
    width: 143px;
}

.weaponone {
    top: 106px;
    left: 471px;
}

.weapontwo {
    top: 106px;
    left: 648px;
}

.weaponthree {
    top: 275px;
    left: 472px;
}

.weaponfour {
    left: 648px;
    top: 275px;
}

.weaponsquare .attack {
    position: absolute;
    top: 17px;
    left: 38px;
    height: 22px;
    width: 68px;
    text-align: center;
}
.weaponsquare .recovery {
    position: absolute;
    top: 17px;
    left: -17px;
    height: 22px;
    width: 68px;
    text-align: center;
}
.weaponsquare .init {
    position: absolute;
    top: 17px;
    left: 93px;
    height: 22px;
    width: 68px;
    text-align: center;
}
.weaponsquare .def {
    position: absolute;
    top: 57px;
    left: 0px;
    height: 22px;
    width: 68px;
    text-align: center;
}
.weaponsquare .encumb {
    position: absolute;
    top: 57px;
    left: 38px;
    height: 22px;
    width: 68px;
    text-align: center;
}
.weaponsquare .drshell {
    display: flex;
    justify-content: space-around;
    flex-direction: column;
    position: absolute;
    top: 52px;
    left: 82px;
    height: 29px;
    width: 61px;
    text-align: center;
}
/* ... */

